# RayTracer

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md
bonus/: Makefile
bonus/asset/: convert.sh  example.cfg
bonus/doc/: mydoc.drawio
bonus/includes/: color.hpp  my.hpp
bonus/includes/class/: Parse.hpp  window.hpp
bonus/includes/class/objet/: camera.hpp  light.hpp  primitive.hpp
bonus/src/: main.cpp
bonus/src/class/: parse.cpp  window.cpp
bonus/src/class/objet/: camera.cpp  light.cpp  primitive.cpp
bootstrap/src/: mainfile.cpp  raytracer.cpp
cmake/: PatchLibConfig.cmake
doc/: doc.drawio
docs/: FEATURES.md
includes/: ArgHandler.hpp  Core.hpp  Factory.hpp  Maths.hpp  Ray.hpp  Raytracer.hpp  Scene.hpp
includes/config/: Parser.hpp
includes/shapes/: AShape.hpp  Cylinder.hpp  IShape.hpp  Plane.hpp  Rectangle.hpp  Sphere.hpp
scenes/: example.cfg
src/: ArgHandler.cpp  Camera.cpp  Core.cpp  Maths.cpp  Ray.cpp  Scene.cpp  main.cpp
src/NShapes/: AShape.cpp  Cylinder.cpp  Factory.cpp  Plane.cpp  Rectangle.cpp  Sphere.cpp
src/config/: Parser.cpp
